# C_Darray

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac
include/: config.h  config.h.in  darray.h
src/: darray.c
src/.deps/: libdarray_a-darray.Po
src/test/: test.c  test_float.c  test_int.c
src/test/.deps/: test-test.Po
